libwebgpu/lib/lib_webgpu.h


typedef struct WGpuSupportedLimits
{
  uint64_t maxUniformBufferBindingSize; 
  uint64_t maxStorageBufferBindingSize; 
  uint64_t maxBufferSize;               
  uint32_t maxTextureDimension1D; 
  uint32_t maxTextureDimension2D; 
  uint32_t maxTextureDimension3D; 
  uint32_t maxTextureArrayLayers; 
  uint32_t maxBindGroups; 
  uint32_t maxBindGroupsPlusVertexBuffers; 
  uint32_t maxBindingsPerBindGroup; 
  uint32_t maxDynamicUniformBuffersPerPipelineLayout; 
  uint32_t maxDynamicStorageBuffersPerPipelineLayout; 
  uint32_t maxSampledTexturesPerShaderStage; 
  uint32_t maxSamplersPerShaderStage; 
  uint32_t maxStorageBuffersPerShaderStage; 
  uint32_t maxStorageTexturesPerShaderStage; 
  uint32_t maxUniformBuffersPerShaderStage; 
  uint32_t minUniformBufferOffsetAlignment; 
  uint32_t minStorageBufferOffsetAlignment; 
  uint32_t maxVertexBuffers; 
  uint32_t maxVertexAttributes; 
  uint32_t maxVertexBufferArrayStride; 
  uint32_t maxInterStageShaderVariables; 
  uint32_t maxColorAttachments; 
  uint32_t maxColorAttachmentBytesPerSample; 
  uint32_t maxComputeWorkgroupStorageSize; 
  uint32_t maxComputeInvocationsPerWorkgroup; 
  uint32_t maxComputeWorkgroupSizeX; 
  uint32_t maxComputeWorkgroupSizeY; 
  uint32_t maxComputeWorkgroupSizeZ; 
  uint32_t unused_padding;
} WGpuSupportedLimits;
typedef int WGPU_FEATURES_BITFIELD;
typedef struct WGpuAdapterInfo
{
  char vendor[512];
  char architecture[512];
  char device[512];
  char description[512];
} WGpuAdapterInfo;
void wgpu_request_animation_frame_loop(WGPU_BOOL (*callback)(double time, void *userData), void *userData);
typedef void (*WGpuRequestAdapterCallback)(WGpuAdapter adapter, void *userData);
WGPU_BOOL navigator_gpu_request_adapter_async(const WGpuRequestAdapterOptions *options NOTNULL, WGpuRequestAdapterCallback adapterCallback, void *userData);
WGpuAdapter navigator_gpu_request_adapter_sync(const WGpuRequestAdapterOptions *options NOTNULL);
void navigator_gpu_request_adapter_async_simple(WGpuRequestAdapterCallback adapterCallback);
WGpuAdapter navigator_gpu_request_adapter_sync_simple(void);
WGPU_TEXTURE_FORMAT navigator_gpu_get_preferred_canvas_format(void);
WGPU_TEXTURE_FORMAT navigator_gpu_get_preferred_canvas_format(WGpuAdapter, WGpuCanvasContext);
const char * const * navigator_gpu_get_wgsl_language_features(void);
WGPU_BOOL navigator_gpu_is_wgsl_language_feature_supported(const char *feature);
typedef struct WGpuRequestAdapterOptions
{
  WGPU_POWER_PREFERENCE powerPreference;
  WGPU_BOOL forceFallbackAdapter;
} WGpuRequestAdapterOptions;
extern const WGpuRequestAdapterOptions WGPU_REQUEST_ADAPTER_OPTIONS_DEFAULT_INITIALIZER;
typedef int WGPU_POWER_PREFERENCE;
typedef WGpuObjectBase WGpuAdapter;
WGPU_BOOL wgpu_is_adapter(WGpuObjectBase object);
WGPU_FEATURES_BITFIELD wgpu_adapter_or_device_get_features(WGpuAdapter adapter);
WGPU_BOOL wgpu_adapter_or_device_supports_feature(WGpuAdapter adapter, WGPU_FEATURES_BITFIELD feature);
void wgpu_adapter_or_device_get_limits(WGpuAdapter adapter, WGpuSupportedLimits *limits NOTNULL);
void wgpu_adapter_get_info(WGpuAdapter adapter, WGpuAdapterInfo *adapterInfo NOTNULL);
WGPU_BOOL wgpu_adapter_is_fallback_adapter(WGpuAdapter adapter);
typedef void (*WGpuRequestDeviceCallback)(WGpuDevice device, void *userData);
void wgpu_adapter_request_device_async(WGpuAdapter adapter, const WGpuDeviceDescriptor *descriptor NOTNULL, WGpuRequestDeviceCallback deviceCallback, void *userData);
WGpuDevice wgpu_adapter_request_device_sync(WGpuAdapter adapter, const WGpuDeviceDescriptor *descriptor NOTNULL);
void wgpu_adapter_request_device_async_simple(WGpuAdapter adapter, WGpuRequestDeviceCallback deviceCallback);
WGpuDevice wgpu_adapter_request_device_sync_simple(WGpuAdapter adapter);
typedef struct _WGPU_ALIGN_TO_64BITS WGpuQueueDescriptor
{
  const char *label;
  _WGPU_PTR_PADDING(0);
} WGpuQueueDescriptor;
typedef struct WGpuDeviceDescriptor
{
  WGpuSupportedLimits requiredLimits;
  WGpuQueueDescriptor defaultQueue;
  WGPU_FEATURES_BITFIELD requiredFeatures;
  uint32_t unused_padding;
} WGpuDeviceDescriptor;
extern const WGpuDeviceDescriptor WGPU_DEVICE_DESCRIPTOR_DEFAULT_INITIALIZER;
typedef WGpuObjectBase WGpuDevice;
WGPU_BOOL wgpu_is_device(WGpuObjectBase object);
WGpuQueue wgpu_device_get_queue(WGpuDevice device);
typedef int WGPU_TEXTURE_FORMAT;
typedef WGpuObjectBase WGpuQueue;
typedef WGpuObjectBase WGpuCanvasContext;