lib/ffi/ffi_webgpu.dart


  late final _wgpu_request_animation_frame_loopPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(
                          ffi.Double time, ffi.Pointer<ffi.Void> userData)>>,
              ffi.Pointer<ffi.Void>)>>('wgpu_request_animation_frame_loop');
  late final _wgpu_request_animation_frame_loop =
      _wgpu_request_animation_frame_loopPtr.asFunction<
          void Function(
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(
                          ffi.Double time, ffi.Pointer<ffi.Void> userData)>>,
              ffi.Pointer<ffi.Void>)>();

  int navigator_gpu_request_adapter_async(
    ffi.Pointer<WGpuRequestAdapterOptions> options,
    WGpuRequestAdapterCallback adapterCallback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _navigator_gpu_request_adapter_async(
      options,
      adapterCallback,
      userData,
    );
  }

  late final _navigator_gpu_request_adapter_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<WGpuRequestAdapterOptions>,
              WGpuRequestAdapterCallback,
              ffi.Pointer<ffi.Void>)>>('navigator_gpu_request_adapter_async');
  late final _navigator_gpu_request_adapter_async =
      _navigator_gpu_request_adapter_asyncPtr.asFunction<
          int Function(ffi.Pointer<WGpuRequestAdapterOptions>,
              WGpuRequestAdapterCallback, ffi.Pointer<ffi.Void>)>();

  WGpuAdapter navigator_gpu_request_adapter_sync(
    ffi.Pointer<WGpuRequestAdapterOptions> options,
  ) {
    return _navigator_gpu_request_adapter_sync(
      options,
    );
  }

  late final _navigator_gpu_request_adapter_syncPtr = _lookup<
          ffi.NativeFunction<
              WGpuAdapter Function(ffi.Pointer<WGpuRequestAdapterOptions>)>>(
      'navigator_gpu_request_adapter_sync');
  late final _navigator_gpu_request_adapter_sync =
      _navigator_gpu_request_adapter_syncPtr.asFunction<
          WGpuAdapter Function(ffi.Pointer<WGpuRequestAdapterOptions>)>();

  void navigator_gpu_request_adapter_async_simple(
    WGpuRequestAdapterCallback adapterCallback,
  ) {
    return _navigator_gpu_request_adapter_async_simple(
      adapterCallback,
    );
  }

  late final _navigator_gpu_request_adapter_async_simplePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(WGpuRequestAdapterCallback)>>(
      'navigator_gpu_request_adapter_async_simple');
  late final _navigator_gpu_request_adapter_async_simple =
      _navigator_gpu_request_adapter_async_simplePtr
          .asFunction<void Function(WGpuRequestAdapterCallback)>();

  WGpuAdapter navigator_gpu_request_adapter_sync_simple() {
    return _navigator_gpu_request_adapter_sync_simple();
  }

  late final _navigator_gpu_request_adapter_sync_simplePtr =
      _lookup<ffi.NativeFunction<WGpuAdapter Function()>>(
          'navigator_gpu_request_adapter_sync_simple');
  late final _navigator_gpu_request_adapter_sync_simple =
      _navigator_gpu_request_adapter_sync_simplePtr
          .asFunction<WGpuAdapter Function()>();

  int navigator_gpu_get_preferred_canvas_format(
    WGpuAdapter arg0,
    WGpuCanvasContext arg1,
  ) {
    return _navigator_gpu_get_preferred_canvas_format(
      arg0,
      arg1,
    );
  }

  late final _navigator_gpu_get_preferred_canvas_formatPtr = _lookup<
      ffi.NativeFunction<
          WGPU_TEXTURE_FORMAT Function(WGpuAdapter,
              WGpuCanvasContext)>>('navigator_gpu_get_preferred_canvas_format');
  late final _navigator_gpu_get_preferred_canvas_format =
      _navigator_gpu_get_preferred_canvas_formatPtr
          .asFunction<int Function(WGpuAdapter, WGpuCanvasContext)>();

  ffi.Pointer<ffi.Pointer<ffi.Char>>
      navigator_gpu_get_wgsl_language_features() {
    return _navigator_gpu_get_wgsl_language_features();
  }

  late final _navigator_gpu_get_wgsl_language_featuresPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Pointer<ffi.Char>> Function()>>(
      'navigator_gpu_get_wgsl_language_features');
  late final _navigator_gpu_get_wgsl_language_features =
      _navigator_gpu_get_wgsl_language_featuresPtr
          .asFunction<ffi.Pointer<ffi.Pointer<ffi.Char>> Function()>();

  int navigator_gpu_is_wgsl_language_feature_supported(
    ffi.Pointer<ffi.Char> feature,
  ) {
    return _navigator_gpu_is_wgsl_language_feature_supported(
      feature,
    );
  }

  late final _navigator_gpu_is_wgsl_language_feature_supportedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'navigator_gpu_is_wgsl_language_feature_supported');
  late final _navigator_gpu_is_wgsl_language_feature_supported =
      _navigator_gpu_is_wgsl_language_feature_supportedPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  late final ffi.Pointer<WGpuRequestAdapterOptions>
      _WGPU_REQUEST_ADAPTER_OPTIONS_DEFAULT_INITIALIZER =
      _lookup<WGpuRequestAdapterOptions>(
          'WGPU_REQUEST_ADAPTER_OPTIONS_DEFAULT_INITIALIZER');

  WGpuRequestAdapterOptions
      get WGPU_REQUEST_ADAPTER_OPTIONS_DEFAULT_INITIALIZER =>
          _WGPU_REQUEST_ADAPTER_OPTIONS_DEFAULT_INITIALIZER.ref;

  int wgpu_is_adapter(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_adapter(
      object,
    );
  }

  late final _wgpu_is_adapterPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_adapter');
  late final _wgpu_is_adapter =
      _wgpu_is_adapterPtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_adapter_or_device_get_features(
    WGpuAdapter adapter,
  ) {
    return _wgpu_adapter_or_device_get_features(
      adapter,
    );
  }

  late final _wgpu_adapter_or_device_get_featuresPtr =
      _lookup<ffi.NativeFunction<WGPU_FEATURES_BITFIELD Function(WGpuAdapter)>>(
          'wgpu_adapter_or_device_get_features');
  late final _wgpu_adapter_or_device_get_features =
      _wgpu_adapter_or_device_get_featuresPtr
          .asFunction<int Function(WGpuAdapter)>();

  int wgpu_adapter_or_device_supports_feature(
    WGpuAdapter adapter,
    int feature,
  ) {
    return _wgpu_adapter_or_device_supports_feature(
      adapter,
      feature,
    );
  }

  late final _wgpu_adapter_or_device_supports_featurePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(WGpuAdapter, WGPU_FEATURES_BITFIELD)>>(
      'wgpu_adapter_or_device_supports_feature');
  late final _wgpu_adapter_or_device_supports_feature =
      _wgpu_adapter_or_device_supports_featurePtr
          .asFunction<int Function(WGpuAdapter, int)>();

  void wgpu_adapter_or_device_get_limits(
    WGpuAdapter adapter,
    ffi.Pointer<WGpuSupportedLimits> limits,
  ) {
    return _wgpu_adapter_or_device_get_limits(
      adapter,
      limits,
    );
  }

  late final _wgpu_adapter_or_device_get_limitsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  WGpuAdapter, ffi.Pointer<WGpuSupportedLimits>)>>(
      'wgpu_adapter_or_device_get_limits');
  late final _wgpu_adapter_or_device_get_limits =
      _wgpu_adapter_or_device_get_limitsPtr.asFunction<
          void Function(WGpuAdapter, ffi.Pointer<WGpuSupportedLimits>)>();

  void wgpu_adapter_get_info(
    WGpuAdapter adapter,
    ffi.Pointer<WGpuAdapterInfo> adapterInfo,
  ) {
    return _wgpu_adapter_get_info(
      adapter,
      adapterInfo,
    );
  }

  late final _wgpu_adapter_get_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuAdapter,
              ffi.Pointer<WGpuAdapterInfo>)>>('wgpu_adapter_get_info');
  late final _wgpu_adapter_get_info = _wgpu_adapter_get_infoPtr
      .asFunction<void Function(WGpuAdapter, ffi.Pointer<WGpuAdapterInfo>)>();

  int wgpu_adapter_is_fallback_adapter(
    WGpuAdapter adapter,
  ) {
    return _wgpu_adapter_is_fallback_adapter(
      adapter,
    );
  }

  late final _wgpu_adapter_is_fallback_adapterPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuAdapter)>>(
          'wgpu_adapter_is_fallback_adapter');
  late final _wgpu_adapter_is_fallback_adapter =
      _wgpu_adapter_is_fallback_adapterPtr
          .asFunction<int Function(WGpuAdapter)>();

  void wgpu_adapter_request_device_async(
    WGpuAdapter adapter,
    ffi.Pointer<WGpuDeviceDescriptor> descriptor,
    WGpuRequestDeviceCallback deviceCallback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_adapter_request_device_async(
      adapter,
      descriptor,
      deviceCallback,
      userData,
    );
  }

  late final _wgpu_adapter_request_device_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuAdapter,
              ffi.Pointer<WGpuDeviceDescriptor>,
              WGpuRequestDeviceCallback,
              ffi.Pointer<ffi.Void>)>>('wgpu_adapter_request_device_async');
  late final _wgpu_adapter_request_device_async =
      _wgpu_adapter_request_device_asyncPtr.asFunction<
          void Function(WGpuAdapter, ffi.Pointer<WGpuDeviceDescriptor>,
              WGpuRequestDeviceCallback, ffi.Pointer<ffi.Void>)>();

  WGpuDevice wgpu_adapter_request_device_sync(
    WGpuAdapter adapter,
    ffi.Pointer<WGpuDeviceDescriptor> descriptor,
  ) {
    return _wgpu_adapter_request_device_sync(
      adapter,
      descriptor,
    );
  }

  late final _wgpu_adapter_request_device_syncPtr = _lookup<
          ffi.NativeFunction<
              WGpuDevice Function(
                  WGpuAdapter, ffi.Pointer<WGpuDeviceDescriptor>)>>(
      'wgpu_adapter_request_device_sync');
  late final _wgpu_adapter_request_device_sync =
      _wgpu_adapter_request_device_syncPtr.asFunction<
          WGpuDevice Function(
              WGpuAdapter, ffi.Pointer<WGpuDeviceDescriptor>)>();

  void wgpu_adapter_request_device_async_simple(
    WGpuAdapter adapter,
    WGpuRequestDeviceCallback deviceCallback,
  ) {
    return _wgpu_adapter_request_device_async_simple(
      adapter,
      deviceCallback,
    );
  }

  late final _wgpu_adapter_request_device_async_simplePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(WGpuAdapter, WGpuRequestDeviceCallback)>>(
      'wgpu_adapter_request_device_async_simple');
  late final _wgpu_adapter_request_device_async_simple =
      _wgpu_adapter_request_device_async_simplePtr
          .asFunction<void Function(WGpuAdapter, WGpuRequestDeviceCallback)>();

  WGpuDevice wgpu_adapter_request_device_sync_simple(
    WGpuAdapter adapter,
  ) {
    return _wgpu_adapter_request_device_sync_simple(
      adapter,
    );
  }

  late final _wgpu_adapter_request_device_sync_simplePtr =
      _lookup<ffi.NativeFunction<WGpuDevice Function(WGpuAdapter)>>(
          'wgpu_adapter_request_device_sync_simple');
  late final _wgpu_adapter_request_device_sync_simple =
      _wgpu_adapter_request_device_sync_simplePtr
          .asFunction<WGpuDevice Function(WGpuAdapter)>();

  late final ffi.Pointer<WGpuDeviceDescriptor>
      _WGPU_DEVICE_DESCRIPTOR_DEFAULT_INITIALIZER =
      _lookup<WGpuDeviceDescriptor>(
          'WGPU_DEVICE_DESCRIPTOR_DEFAULT_INITIALIZER');

  WGpuDeviceDescriptor get WGPU_DEVICE_DESCRIPTOR_DEFAULT_INITIALIZER =>
      _WGPU_DEVICE_DESCRIPTOR_DEFAULT_INITIALIZER.ref;

  int wgpu_is_device(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_device(
      object,
    );
  }

  late final _wgpu_is_devicePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_device');
  late final _wgpu_is_device =
      _wgpu_is_devicePtr.asFunction<int Function(WGpuObjectBase)>();

  WGpuQueue wgpu_device_get_queue(
    WGpuDevice device,
  ) {
    return _wgpu_device_get_queue(
      device,
    );
  }
